# tomcatmanager

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  azure-pipelines.yml  build-pyenvs.sh  conftest.py  doc8.ini  pylintrc  pyproject.toml  pytest.ini  setup.py  tasks.py  tomcat-manager.py  tox.ini
.github/workflows/: docstest.yml  doctest.yml  format.yml  quicktest.yml  test.yml  tests.yml  tox.yml
demos/: commandline.tape  interactive-tour.tape  package.tape
docs/: Makefile  authentication.rst  clientauthentication.rst  commandline.rst  conf.py  configuretomcat.rst  developer.rst  index.rst  install.rst  interactive.rst  library.rst  make.bat  package.rst  tomcat-manager.rst
docs/api/: ApplicationState.rst  InteractiveTomcatManager.rst  ServerInfo.rst  StatusCode.rst  TomcatApplication.rst  TomcatError.rst  TomcatMajor.rst  TomcatMajorMinor.rst  TomcatManager.rst  TomcatManagerResponse.rst  TomcatNotConnected.rst  TomcatNotImplementedError.rst  index.rst  migrating2.rst  migrating3.rst  migrating4.rst  migrating5.rst  migrating6.rst  migrating7.rst
docs/interactive/: additional.rst  configfile.rst  connectdeploy.rst  index.rst  settings.rst  themes.rst  tomcatmanager.rst
docs/source/: conf.py  developer.rst  index.rst
src/tomcatmanager/: __init__.py  __main__.py  interactive_tomcat_manager.py  models.py  pylintrc  tomcat_manager.py
src/tomcatmanager/templates/: theme.toml
src/tomcatmanager/themes/: dark.toml  default-dark.toml  default-light.toml  light.toml
tests/: __init__.py  conftest.py  mock_server.py  mock_server80.py  mock_server_10_0.py  mock_server_10_1.py  mock_server_7_0.py  mock_server_8_0.py  mock_server_8_5.py  mock_server_9_0.py  mock_server_nossl.py  mock_server_ssl.py  pylintrc  test_action.py  test_apps.py  test_info.py  test_interactive.py  test_interactive_admin.py  test_interactive_apps.py  test_interactive_connect.py  test_interactive_info.py  test_main.py  test_manager.py  test_manager_apps.py  test_manager_implemented.py  test_manager_info.py  test_manager_ssl.py  test_models.py
tests/war/: context.xml
tomcatmanager/: __init__.py  __main__.py  cmd2_config.py  interactive_tomcat_manager.py  models.py  pylintrc  status_codes.py  tomcat_manager.py
