# pyproject.toml
#

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "tomcatmanager"
description = "A command line tool and python library for managing a tomcat server."
readme = "README.rst"
authors = [
    {name = "Jared Crapo", email = "jared@kotfu.net"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["java", "tomcat", "command line"]
requires-python = ">=3.8"
dependencies = [
    "cmd2>=2.4.3,<3",
    "requests>=2,<3",
    "appdirs",
    "importlib_resources>=5.0; python_version<'3.9'",
    "tomlkit",
    "rich",
    "rich_argparse",
]
dynamic = ["version"]

[tool.setuptools_scm]
# empty section is the quivilent of setuptools_scm=True in setup.py


[project.scripts]
tomcat-manager = "tomcatmanager.__main__:main"


[project.urls]
homepage = "https://github.com/tomcatmanager/tomcatmanager"
documentation = "https://tomcatmanager.readthedocs.io"
repository = "https://github.com/tomcatmanager/tomcatmanager"


[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "pytest-mock",
    "tox",
    "codecov",
    "pytest-cov",
    "ruff",
    "pylint",
    "setuptools_scm",
    "wheel",
    "twine",
    "rope",
    "invoke",
    "sphinx<7",
    "sphinx-autobuild",
    "sphinx_rtd_theme>1",
    "autodocsumm",
    "doc8",
    "docutils",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx_rtd_theme",
    "autodocsumm",
    "doc8",
    "docutils",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
tomcatmanager = ["py.typed"]


[tool.ruff]
line-length = 88
indent-width = 4
